# extrimian-ssi-hackalong-project

./: Cargo.toml
.github/workflows/: build.yml
json_model/: base_ticket_template.json  extras.json
src/: main.rs  models.rs  utils.rs
src/api/: mod.rs  routes.rs
src/bot/: handlers.rs  mod.rs
src/services/: issuance.rs  mod.rs
