[package]
name = "extrimian_ssi_hackalong_project"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4.38"
log = "0.4.22"
nanoid = "0.4.0"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.7", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0.127"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full", "rt-multi-thread", "macros"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
image = "0.25.2"
qrcode = "0.14.1"
